# whatsapp_automation

./: .env.example  .gitignore  DEPLOIEMENT.md  README.md  pyproject.toml  requirements.txt
.claude/: AUDIT_webhook.md  formats_captures.md  settings.json
docs/: api_block_integration_guide.md  api_block_quick.md  api_clients_block.md  api_clients_lookup.md  api_integration_guide.md  clients_introuvables_txn_id_optionnel.md  deblocage_multi_abonnements.md  deblocage_superviseur_lr.md  plan_implementation_phase2_3.md  postman_collection.json  presentation_migration_python.md  services_windows_migration.md  webhook_ultramsg_apache.md
fakes/: __init__.py  fake_mikrotik.py  fake_ucrm.py  fake_ultramsg.py
scripts/: _verify_48783201.py  _wait_retry.py  backfill_payments.py  demo_2_clients.py  demo_48783201.py  demo_9_clients.py  demo_e2e.py  demo_overpayment_48783201.py  demo_underpayment.py  export_dataset.py  init_db.py  migrate_reclass_payment_complete.py  monthly_report.py  rattrapage_faux_sous_paiements.py  replay_recipient_check.py  run_ai_ocr.bat  run_annotation.bat  run_fakes.bat  run_webhook.bat  run_worker.bat  sync_clients_from_ucrm.py  tail_logs.bat  tail_logs.ps1  test_client_lookup.py  test_dashboard_parser.py  test_document_type.py  test_enqueue_dedup.py  test_events_db.py  test_fai_supervisor.py  test_job_builder.py  test_pipeline_crm_mapping_fallback.py  test_pipeline_phone_resolution_fallback.py  test_subsequent_payment_rule.py  test_unblock_allocation.py  test_unknown_clients_associate.py  test_unknown_clients_confirm.py  test_unknown_clients_store.py  (+2 more)
(+59 files in other folders)
